# qibuild

./: .gitignore  .gitlab-ci.yml  .mailmap  .project  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.rst  COPYING  INSTALL  INSTALL.rst  MANIFEST.in  README  README.manifest.rst  README.md  README.newconf  README.next  README.rst  TODO  TODO-qibuild-refact  TODO-qitest  coverage.ini  generate-doc.sh  generate-sourceme.sh  generate.sh  install-qibuild.bat  install-qibuild.py  install-qibuild.sh  pylintrc  qiproject.xml  requirements.txt  run_setup_py.cmake.in  setup.cfg  setup.py  sourceme.sh  win-install-qibuild.py
cmake/qibuild/: #misc.cmake#  .external.cmake.swp  CMakeLists.txt  arguments.cmake  arguments_test.cmake  asciidoc.cmake  autostrap.cmake  autotools.cmake  codegen.cmake  cpackutils.cmake  doc.cmake  doxygen.cmake  expect.cmake  expect_test.cmake  external.cmake  find.cmake  flags.cmake  general.cmake  gettext.cmake  git.cmake  gitutils.cmake  index.txt  install.cmake  launcher.cmake  layout.cmake  log.cmake  option.cmake  perf.cmake  python.cmake  qi_add_test.py  qibuild-config.cmake  qibuild.cmake  sdk.cmake  set.cmake  stage.cmake  subdirectory.cmake  submodule.cmake  submodule_test.cmake  target.cmake  tests.cmake  (+2 more)
cmake/qibuild/compat/: compat-bad.cmake  compat.cmake  msvc.cmake  toolchain-compat.cmake
cmake/qibuild/compat/t001chain/cmake/: general.cmake
cmake/qibuild/internal/: autostrap.cmake  check.cmake  copy.cmake  copydlls.cmake  fix_shared_libs.cmake  fixdylibs.cmake  glob.cmake  install.cmake  layout.cmake  list.cmake  stage.cmake  tests.cmake  uselib.cmake
cmake/qibuild/misc/: boostutils.cmake  doc.cmake  find.cmake  general.cmake  layout.cmake  misc.cmake  target-old.cmake  target.cmake  trampolineutils.cmake  use.cmake
cmake/qibuild/misc/package/: CMakeLists.txt
cmake/qibuild/modules/: ACAPELAASRConfig.cmake  ACAPELATTSConfig.cmake  ALSALIBConfig.cmake  ARCHIVEConfig.cmake  ASCIIDOCConfig.cmake  AVAHICOMPATDNSSDConfig.cmake  AVAHIConfig.cmake  BLUEZConfig.cmake  BOOST-STATICConfig.cmake  BOOSTConfig.cmake  BOOST_DATE_TIME-STATICConfig.cmake  BOOST_DATE_TIMEConfig.cmake  BOOST_FILESYSTEM-STATICConfig.cmake  BOOST_FILESYSTEMConfig.cmake  BOOST_PROGRAM_OPTIONS-STATICConfig.cmake  BOOST_PROGRAM_OPTIONSConfig.cmake  BOOST_REGEXConfig.cmake  BOOST_SERIALIZATION-STATICConfig.cmake  BOOST_SERIALIZATIONConfig.cmake  BOOST_SIGNALS-STATICConfig.cmake  BOOST_SIGNALSConfig.cmake  BOOST_THREAD-STATICConfig.cmake  BOOST_THREADConfig.cmake  BOOST_THREADPOOL-STATICConfig.cmake  BOOST_THREADPOOLConfig.cmake  CRYPTOConfig.cmake  DL-STATICConfig.cmake  DLConfig.cmake  DOXYGENConfig.cmake  EIGENConfig.cmake  GETTEXTConfig.cmake  GLIBConfig.cmake  GSOAPConfig.cmake  GSTREAMERConfig.cmake  GTESTConfig.cmake  ICONVConfig.cmake  LIRCCLIENTConfig.cmake  MConfig.cmake  ODEConfig.cmake  OPENCVConfig.cmake  (+277 more)
cmake/qibuild/swig/: java.cmake  python.cmake  ruby.cmake
cmake/qibuild/templates/: CMakeLists.txt  bootstrap.cmake  findmodule.bin.cmake.sdk.in  findmodule.header.cmake.in  findmodule.lib.cmake.in  findmodule.lib.cmake.sdk.in  install_autotools.cmake  post-copy-deps.cmake  post-copy-dlls.cmake  post-copy-dylibs.cmake  post-copy-plugin.cmake  qibuild.cmake  toolchain-pc.cmake  trampoline_macosx.in  trampoline_sdk_linux.in  vcproj.user.in
cmake/qibuild/toolchain/: Toolchain-atom.cmake  Toolchain-generic.cmake  Toolchain-geode.cmake  Toolchain-iphone.cmake  toolchain-mingw32-archlinux.cmake
cmake/samples/uselib/: CMakeLists.txt
cmake/samples/uselib/foosdk/: sourceme.cmake
cmake/templates/: CMakeLists.txt  bootstrap.cmake  cmake_uninstall.cmake.in  findmodule.bin.cmake.in  revision.in  root.cmake.in  trampoline_linux.in  trampoline_linux64.in  trampoline_sdk_linux64.in  trampoline_sdk_macosx.in  trampoline_sdk_windows.in  trampoline_windows.in
doc/foobar/bar/: CMakeLists.txt
doc/foobar/bar/bar/: bar.cpp
doc/source/samples/foobar_pure_cmake/foo/: CMakeLists.txt
doc/source/samples/fooproject/libfoo/: CMakeLists.txt
doc/source/samples/helloworld/hello/: CMakeLists.txt  main.cpp
doc/source/samples/helloworld/world/: CMakeLists.txt
python/qibuild/templates/project/: CMakeLists.txt  main.cpp  qibuild.manifest  qiproject.xml  test.cpp
python/qibuild/test/bar/: CMakeLists.txt  main.cpp
python/qibuild/test/foo/: CMakeLists.txt  bar.cpp  eggs.cpp  main.cpp  qibuild.cmake  qibuild.manifest  qiproject.xml  spam.cpp
python/qibuild/test/hello/: CMakeLists.txt  base.cfg  main.cpp  qibuild.cmake  qibuild.manifest  qiproject.xml
python/qibuild/test/perf/: CMakeLists.txt  main.cpp
python/qibuild/test/projects/bar/: CMakeLists.txt  main.cpp  qiproject.xml  run_foo_tool.in.cmake
python/qibuild/test/projects/binsdkuser/: CMakeLists.txt  qiproject.xml
python/qibuild/test/projects/codegen/: CMakeLists.txt  gen.py  main.in.cpp  qiproject.xml
python/qibuild/test/projects/compile_data/: CMakeLists.txt  compile_data.in.cmake  compiler.cpp  qiproject.xml
python/qibuild/test/projects/config_h/: CMakeLists.txt  config.in.h  main.cpp
python/qibuild/test/projects/cov/: CMakeLists.txt  main.cpp  qiproject.xml  test.cpp
python/qibuild/test/projects/cross/: CMakeLists.txt  bar.c  foo.c  qiproject.xml  toolchain.cmake
python/qibuild/test/projects/debugme/: CMakeLists.txt  main.cpp  qiproject.xml  test.cpp
python/qibuild/test/projects/gitversion/: CMakeLists.txt  main.cpp  qiproject.xml
python/qibuild/test/projects/hello/: CMakeLists.txt  main.cpp  qiproject.xml
python/qibuild/test/projects/hellojavajni/: CMakeLists.txt  qiproject.xml
python/qibuild/test/projects/incorrect_cmake/: CMakeLists.txt  qiproject.xml
python/qibuild/test/projects/installme/: CMakeLists.txt  foo.cpp  foo.i  qiproject.xml  test_foo.cpp
python/qibuild/test/submodule/: CMakeLists.txt  hello.cpp  main.cpp  qiproject.xml
python/qibuild/test/world/: CMakeLists.txt  fooConfig.cmake  plugin.cpp  plugin.h  qibuild.cmake  qibuild.manifest
python/qibuild/test/world/bar/: bar.cpp  bar.h
python/qibuild/test/world/cmake/: foo-config.cmake
python/qibuild/test/world/world/: world.h  (+1 more)
(+1664 files in other folders)
